# src/controllers/users.controller.js
@@ -11,9 +11,9 @@ const getAllUsers = async (req, res) => {
 
 const getOneUser = async (req, res) => {
     
-    const { userId } = req.params;
+    const { id } = req.params;
     try {
-        const user = await User.findByPk(userId)
+        const user = await User.findByPk(id)
         res.json(user)
     } catch (error) {
         return res.status(500).json({message: error.message})
@@ -23,23 +23,9 @@ const getOneUser = async (req, res) => {
 const createUser =  async (req, res) => {
     
     try {
-        const { 
-            userId,
-            role,
-            password,
-            email,
-            firstName,
-            lastName,
-        } = req.body;
+        const { id, role, password, email, firstName, lastName } = req.body;
         
-        const newUser = await User.create({
-            userId,
-            role,
-            password,
-            email,
-            firstName,
-            lastName,
-        });
+        const newUser = await User.create({ id, role, password, email, firstName, lastName });
         res.json({newUser})
     } catch (error) {
         return res.status(500).json({message: error.message})
@@ -49,10 +35,10 @@ const createUser =  async (req, res) => {
 
 const updateUser = async (req, res) => {
     
-    const { userId } = req.params;
+    const { id } = req.params;
 
     try {
-        const user = await User.findByPk(userId);
+        const user = await User.findByPk(id);
         
         user.set(req.body);
         await user.save();
@@ -65,11 +51,11 @@ const updateUser = async (req, res) => {
 }
 
 const deleteUser = async (req, res) => {
-    const { userId } = req.params;
+    const { id } = req.params;
         
     try {
         const user = await User.destroy({
-            where: { userId }
+            where: { id }
         });
         return res.sendStatus(204);
     } catch (error) {
