# src/swagger.json
@@ -18,31 +18,31 @@
     ],
     "tags": [
       {
-        "name": "Account",
-        "description": "Operations about account"
+        "name": "Product",
+        "description": "Operations about products"
+      },
+      {
+        "name": "Customer",
+        "description": "Operations about customers"
+      },
+      {
+        "name": "Order",
+        "description": "Operations about orders"
       },
       {
         "name": "User",
         "description": "Operations about users"
-      },
-      {
-        "name": "Travel",
-        "description": "Operations about travels"
-      },
-      {
-        "name": "Transaction",
-        "description": "Operations about transactions"
       }
     ],
     "paths": {
-      "/accounts": {
+      "/products": {
         "get": {
           "tags": [
-            "Account"
+            "Product"
           ],
-          "summary": "Get all accounts",
-          "description": "Get all accounts",
-          "operationId": "getAllAccounts",
+          "summary": "Get all products",
+          "description": "Get all products",
+          "operationId": "getAllProducts",
           "responses": {
             "200": {
               "description": "Successful operation",
@@ -51,7 +51,7 @@
                   "schema": {
                     "type": "array",
                     "items": {
-                      "$ref":"#/components/schemas/Account"
+                      "$ref":"#/components/schemas/Product"
                     }  
                   }
                 }
@@ -61,17 +61,17 @@
         },
         "post": {
           "tags": [
-            "Account"
+            "Product"
           ],
           "summary": "Add a new account to the database",
           "description": "Add a new account to the database",
-          "operationId": "createOneAccount",
+          "operationId": "createOneProduct",
           "requestBody": {
-            "description": "Create a new account",
+            "description": "Create a new product",
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref":"#/components/schemas/Account"
+                  "$ref":"#/components/schemas/Product"
                 }
               }
             },
@@ -83,7 +83,7 @@
               "content": {
                 "application/json": {
                   "schema": {
-                    "$ref":"#/components/schemas/Account"  
+                    "$ref":"#/components/schemas/Product"  
                   }
                 }
                 
@@ -95,23 +95,23 @@
           }
         }      
       },
-      "/accounts/{accountCode}": {
+      "/products/{id}": {
         "get": {
           "tags": [
-            "Account"
+            "Product"
           ],
           "summary": "Find account by code",
           "description": "Returns an account",
-          "operationId": "getOneAccount",
+          "operationId": "getOneProduct",
           "parameters": [
             {
-              "name": "accountCode",
+              "name": "id",
               "in": "path",
               "required": true,
-              "description": "Code of the account to return",
+              "description": "Id of the product to return",
               "schema": {
                 "type": "string",
-                "pattern": "^[0-9]{8}$"
+                "pattern": "^[A-Z]{1}[0-9]{3}$"
               }
             }
           ],
@@ -121,7 +121,7 @@
               "content": {
                 "application/json": {
                   "schema": {
-                    "$ref":"#/components/schemas/Account"
+                    "$ref":"#/components/schemas/Product"
                   }
                 }
               }
@@ -130,13 +130,13 @@
               "description": "Invalid ID supplied"
             },
             "404": {
-              "description": "Account not found"
+              "description": "Product not found"
             }
           }
         },
         "put": {
           "tags": [
-            "Account"
+            "Product"
           ],
           "summary": "Update an existing account",
           "description": "Update an existing account by Id",
@@ -195,20 +195,20 @@
         },
         "delete": {
           "tags": [
-            "Account"
+            "Product"
           ],
-          "summary": "Deletes an account",
-          "description": "delete an account",
-          "operationId": "deleteOneAccount",
+          "summary": "Deletes an product",
+          "description": "delete an product",
+          "operationId": "deleteOneProduct",
           "parameters": [
             {
-              "name": "accountCode",
+              "name": "id",
               "in": "path",
-              "description": "Account code to delete",
+              "description": "Product id to delete",
               "required": true,
               "schema": {
                 "type": "string",
-                "pattern":"^[0-9]{8}$"
+                "pattern":"^[A-B]{1}[0-9]{3}$"
               }
             }
           ],
@@ -283,7 +283,7 @@
           }
         }      
       },
-      "/users/{userId}": {
+      "/users/{id}": {
         "get": {
           "tags": [
             "User"
@@ -423,10 +423,10 @@
           }
         }
       },
-      "/travels": {
+      "/customers": {
         "get": {
           "tags": [
-            "Travel"
+            "Customer"
           ],
           "summary": "Get all the travels",
           "description": "Get all travels",
@@ -449,7 +449,7 @@
         },
         "post": {
           "tags": [
-            "Travel"
+            "Customer"
           ],
           "summary": "Add a new travel to the database",
           "description": "Add a new travel to the database",
@@ -483,10 +483,10 @@
           }
         }      
       },
-      "/travels/{travelId}": {
+      "/customers/{id}": {
         "get": {
           "tags": [
-            "Travel"
+            "Customer"
           ],
           "summary": "Find a travel by id",
           "description": "Returns a travel",
@@ -523,7 +523,7 @@
         },
         "put": {
           "tags": [
-            "Travel"
+            "Customer"
           ],
           "summary": "Update an existing travel",
           "description": "Update an existing travel by Id",
@@ -597,7 +597,7 @@
         },
         "delete": {
           "tags": [
-            "Travel"
+            "Customer"
           ],
           "summary": "Deletes an account",
           "description": "delete an account",
@@ -623,10 +623,10 @@
           }
         }
       },
-      "/transactions": {
+      "/orders": {
         "get": {
           "tags": [
-            "Transaction"
+            "Order"
           ],
           "summary": "Get all the transactions",
           "description": "Get all transactions",
@@ -649,7 +649,7 @@
         },
         "post": {
           "tags": [
-            "Transaction"
+            "Order"
           ],
           "summary": "Add a new transaction to the database",
           "description": "Add a new transaction to the database",
@@ -714,10 +714,10 @@
           }
         }      
       },
-      "/transactions/{transactionId}": {
+      "/orders/{id}": {
         "get": {
           "tags": [
-            "Transaction"
+            "Order"
           ],
           "summary": "Find a transaction by id",
           "description": "Returns a transaction",
@@ -755,7 +755,7 @@
         },
         "put": {
           "tags": [
-            "Transaction"
+            "Order"
           ],
           "summary": "Update an existing transaction",
           "description": "Update an existing transaction by Id",
@@ -841,7 +841,7 @@
         },
         "delete": {
           "tags": [
-            "Transaction"
+            "Order"
           ],
           "summary": "Deletes a transaction.",
           "description": "delete a transaction",
@@ -871,23 +871,39 @@
     },
     "components": {
       "schemas": {
-        "Account": {
+        "Product": {
           "type": "object",
           "properties": {
-            "accountCode": {
+            "id": {
               "type": "string",
-              "example": "95000000"
+              "example": "A100"
             },
-            "accountName": {
+            "description": {
               "type": "string",
-              "example": "SELLING EXPENSES"
+              "example": "JABON"
+            },
+            "uom": {
+              "type": "string",
+              "example": "UND"
+            },
+            "stock": {
+              "type": "number",
+              "example": 10
+            },
+            "lastPrice": {
+              "type": "number",
+              "example": 25
+            },
+            "suggestedPrice": {
+              "type": "number",
+              "example": 100.00
             }
           }
         },
         "User": {
           "type": "object",
           "properties": {
-            "userId": {
+            "id": {
               "type": "string",
               "example": "lgalindo"
             },
@@ -913,68 +929,46 @@
             }
           }
         },
-        "Travel": {
+        "Customer": {
           "type": "object",
           "properties": {
-            "travelId": {
+            "id": {
               "type": "string",
-              "example": "2022080301"
+              "example": "40483785"
             },
-            "userId": {
+            "email": {
               "type": "string",
-              "example": "lgalindo"
+              "example": "lgalindo@mail.com"
             },
-            "submitDate": {
+            "firstName": {
               "type": "string",
-              "example": "2022-02-18"
+              "example": "Marylin"
             },
-            "currency": {
+            "lastName": {
               "type": "string",
-              "example": "PEN"
-            },
-            "totalAmount": {
-              "type": "number",
-              "format": "float",
-              "example": 10.00
-            },
-            "destination": {
-              "type": "string",
-              "example": "Arequipa"
+              "example": "Galindo"
             }
           }
         },
-        "Transaction": {
+        "Order": {
           "type": "object",
           "properties": {
-            "transactionId": {
+            "id": {
               "type": "integer",
               "format":"int64",
               "example": 1
             },
-            "travelId": {
+            "date": {
               "type": "string",
-              "example": "2022080301"
+              "example": "2022-10-05"
             },
-            "docType": {
+            "customerId": {
               "type": "string",
-              "example": "003"
+              "example": "22222222"
             },
-            "docNumber": {
+            "salespersonId": {
               "type": "string",
-              "example": "526852"
-            },
-            "accountCode": {
-              "type": "string",
-              "example": "65000000"
-            },
-            "transDescription": {
-              "type": "string",
-              "example": "TAXI AGENCIA"
-            },
-            "amount": {
-              "type": "number",
-              "format":"float",
-              "example": 25.00
+              "example": "22226852"
             }
           }
         }
